// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly 1`] = `
<button
  className="uk-button uk-button-default"
  type="button"
>
  Submit
</button>
`;

exports[`Button renders correctly 2`] = `
<button
  className="uk-button uk-button-default uk-active"
  type="button"
>
  Submit
</button>
`;

exports[`Button renders correctly 3`] = `
<button
  className="uk-button uk-button-default"
  type="submit"
>
  Save
</button>
`;

exports[`Button renders correctly 4`] = `
<button
  className="uk-button uk-button-primary"
  type="button"
>
  Submit
</button>
`;

exports[`Button renders correctly 5`] = `
<button
  className="uk-button uk-button-default"
  success={true}
  type="button"
>
  Submit
</button>
`;

exports[`Button renders correctly 6`] = `
<button
  className="uk-button uk-button-danger"
  type="button"
>
  Submit
</button>
`;

exports[`Button renders correctly 7`] = `
<button
  className="uk-button uk-button-link"
  type="button"
>
  Submit
</button>
`;

exports[`Button renders correctly 8`] = `
<button
  className="uk-button uk-button-default"
  mini={true}
  type="button"
>
  Submit
</button>
`;

exports[`Button renders correctly 9`] = `
<button
  className="uk-button uk-button-default uk-button-small"
  type="button"
>
  Submit
</button>
`;

exports[`Button renders correctly 10`] = `
<button
  className="uk-button uk-button-default uk-button-large"
  type="button"
>
  Submit
</button>
`;

exports[`Button renders correctly 11`] = `
<button
  className="uk-button save-button uk-button-default uk-button-large"
  disabled={true}
  type="button"
>
  Save
</button>
`;
